--- a/katalog/package.json
+++ b/katalog/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
     "crypto-browserify": "^3.12.0",
+    "dotenv": "^16.4.5",
     "mobx": "^6.12.3",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
