--- a/katalog/.env
+++ b/katalog/.env
@@ -1,1 +1,1 @@
-REACT_APP_MY_VAR=https://katalogforhodaya.onrender.com/swagger/index.html
+REACT_APP_Swagger=https://katalogforhodaya.onrender.com/api/Users
