--- a/Solid.Net-master/Solid.Data/Solid.Data.csproj
+++ b/Solid.Net-master/Solid.Data/Solid.Data.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="DotNetEnv" Version="3.0.0" />
     <PackageReference Include="MailKit" Version="4.5.0" />
     <PackageReference Include="MimeKit" Version="4.5.0" />
   </ItemGroup>
